--- a/django/001/src/static/css/style.css
+++ b/django/001/src/static/css/style.css
@@ -18,7 +18,7 @@ body {
 
 nav {
     padding: 1rem;
-    background-color: #44B78B;
+    background-color: #1cbd52;
     color: white;
     font-size: 2.5rem;
 }
